# string-matchers

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  config.py
docs/: FDR.MD
fdr/: CMakeLists.txt  example.cpp
scripts/: README.md  __init__.py  build.py  clean.py  compare_results.py  extract_patterns.py  main.ipynb  run.py  tmp_check.py
scripts/downloads/: __init__.py  ac_download.py  dataset_download.py  dfc_download.py  download_ac.py  download_dataset.py  download_dfc.py  download_fdr.py  fdr_download.py  main.py
src/ac/: CMakeLists.txt  example.cpp  main.cpp
src/dfc/: CMakeLists.txt  example.cpp  main.cpp
src/fdr/: CALLTREE.MD  CMakeLists.txt  config.h  example.cpp  hs_version.h  main.cpp  test_patterns.cpp
src/fdr-minified/: CMakeLists.txt  README.md
src/fdr-minified/fdr/: fdr.c  modifications.md
src/naive/: main.py  naive.py
src/py-fdr/: CPU.py  FDR.py  FDRCompiler.py  Register.py  fdr_exec_log.txt  main.py  run_py_fdr.py  unit_test.py
src/py_fdr/: CPU.py  FDR.py  FDRCompiler.py  README.md  algorithm.md  main.py  pseudocode.md  tests.ipynb  unit_test.py  utils.py
src/py_fdr/experiments/: README.md  experiment_progress.csv  generate_tests.py  main.ipynb  rulesets.txt  run_experiments.py  run_test.py
